# xCOM

./: .cproject  .gitignore  .project  Makefile.am  autogen.sh  configure.ac  doxygen.cfg
examples/: Makefile.am
examples/hello/: Makefile.am  component.xml  hello.c
examples/hello-dbus-server/: .gitignore  Makefile.am  component.xml  hello.xml  server.c
examples/include/examples/: IHello.h
examples/interfaces/examples/: IHello.xml
examples/python/: Makefile.am  component.xml
examples/python/examples/python/: App.py  __init__.py
ext/: Makefile.am
ext/jansson/m4/: .empty
include/: pyCOM.h  xCOM.h
include/xCOM/: IApplication.h  IService.h  ITest.h  clist.h  semaphore.h  types.h
interfaces/xcom/: IApplication.xml  IService.xml  ITest.xml
m4/: .gitignore  python.m4
src/: Makefile.am
src/codegen/: xcom-codegen
src/codegen/codegen/: __init__.py  argument.py  cgeneric.py  component.py  cpython.py  interface.py  match.py  method.py  parser.py  port.py
src/lib/: Makefile.am  cache.c  cache.h  component.c  component.h  handledir.c  handledir.h  hashtable.c  hashtable.h  import.c  import.h  init.c  interfaces.c  interfaces.h  internal.h  lock.h  ports.c  ports.h  query.c  query.h  semaphore.c  trace.c  trace.h  xcom.trc.h
src/pycom/: Makefile.am  import.c  internal.h  module.c  pycom.c  query.c
src/spawn/: Makefile.am  component.xml  spawn.c
src/test/: Makefile.am  component.xml  test.c
tests/: Makefile.am
tests/interfaces/tests/: in_b.xml  in_s.xml  in_y.xml  out_s.xml
tests/python.basic/: Makefile.am  component.xml  test.c
tests/python.basic/tests.in_b/: .gitignore  Makefile.am  component.xml
tests/python.basic/tests.in_b/tests/python/basic/in_b/: Test.py  __init__.py
tests/python.basic/tests.in_s/: Makefile.am  component.xml
tests/python.basic/tests.in_s/tests/python/basic/in_s/: Test.py  __init__.py
tests/python.basic/tests.in_y/: Makefile.am  component.xml
tests/python.basic/tests.in_y/tests/python/basic/in_y/: Test.py  __init__.py
tests/python.basic/tests.out_s/: Makefile.am  component.xml
tests/python.basic/tests.out_s/tests/python/basic/out_s/: Test.py  __init__.py
tests/python.query/: Makefile.am  component.xml
tests/python.query/tests/python/query/: Test.py  __init__.py
